--- a/airbyte/kube/overlays/stable/.env
+++ b/airbyte/kube/overlays/stable/.env
@@ -30,7 +30,7 @@ SUBMITTER_NUM_THREADS=10
 # Miscellaneous
 TRACKING_STRATEGY=segment
 WEBAPP_URL=airbyte-webapp-svc:80
-API_URL=/api/v1/
+API_URL=/apps/airbyte/api/v1/
 INTERNAL_API_HOST=airbyte-server-svc:8001
 
 WORKER_ENVIRONMENT=kubernetes
