--- a/ceph-csi/deploy-nc201/storageclass.yaml
+++ b/ceph-csi/deploy-nc201/storageclass.yaml
@@ -2,7 +2,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-   name: csi-rbd-sc
+   name: tsz-ceph
 provisioner: rbd.csi.ceph.com
 # If topology based provisioning is desired, delayed provisioning of
 # PV is required and is enabled using the following attribute
@@ -16,7 +16,7 @@ parameters:
    # Ensure to create an entry in the configmap named ceph-csi-config, based on
    # csi-config-map-sample.yaml, to accompany the string chosen to
    # represent the Ceph cluster in clusterID below
-   clusterID: d41690c8-528f-11ec-a835-0bd3de3318bf
+   clusterID: 80090ffe-566a-11ec-a526-bffaeb107119
 
    # (optional) If you want to use erasure coded pool with RBD, you need to
    # create two pools. one erasure coded and one replicated.
