--- a/ceph-csi/cephfs/deploy-nuc/v3.4.0-ds03/yamls/7-storageclass.yaml
+++ b/ceph-csi/cephfs/deploy-nuc/v3.4.0-ds03/yamls/7-storageclass.yaml
@@ -16,7 +16,7 @@ parameters:
 
   # (required) CephFS filesystem name into which the volume shall be created
   # eg: fsName: myfs
-  fsName: nuc
+  fsName: nucfs
 
   # (optional) Ceph pool into which volume data shall be stored
   # pool: <cephfs-data-pool>
