--- a/ceph-csi/cephfs/test/pod.yaml
+++ b/ceph-csi/cephfs/test/pod.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: cephfs-demo-pod
+  name: cephfs-pod-10
 spec:
   containers:
     - name: web-server
@@ -17,4 +17,4 @@ spec:
   volumes:
     - name: mypvc
       persistentVolumeClaim:
-        claimName: cephfs-pvc
+        claimName: cephfs-pvc-10
