--- a/ceph-csi/cephfs/v3.8.0/templates/6-csi-cephfsplugin.yaml
+++ b/ceph-csi/cephfs/v3.8.0/templates/6-csi-cephfsplugin.yaml
@@ -16,6 +16,7 @@ spec:
       serviceAccountName: cephfs-csi-nodeplugin
       priorityClassName: system-node-critical
       hostNetwork: true
+      hostPID: true
       # to use e.g. Rook orchestrated cluster, and mons' FQDN is
       # resolved through k8s service, set dns policy to cluster first
       dnsPolicy: ClusterFirstWithHostNet
@@ -26,9 +27,10 @@ spec:
           # created by privileged CSI driver container.
           securityContext:
             privileged: true
+            allowPrivilegeEscalation: true
           image: {{ .Values.ceph.images.csiNodeDriverRegistrar }}
           args:
-            - "--v=5"
+            - "--v=1"
             - "--csi-address=/csi/csi.sock"
             - "--kubelet-registration-path=/var/lib/kubelet/plugins/{{ .Values.ceph.driverName }}/csi.sock"
           env:
@@ -47,7 +49,6 @@ spec:
             capabilities:
               add: ["SYS_ADMIN"]
             allowPrivilegeEscalation: true
-          # for stable functionality replace canary with latest release version
           image: {{ .Values.ceph.images.cephCSI }}
           args:
             - "--nodeid=$(NODE_ID)"
@@ -73,6 +74,12 @@ spec:
                   fieldPath: spec.nodeName
             - name: CSI_ENDPOINT
               value: unix:///csi/csi.sock
+            - name: POD_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
+          # - name: KMS_CONFIGMAP_NAME
+          #   value: encryptionConfig
           imagePullPolicy: "IfNotPresent"
           volumeMounts:
             - name: socket-dir
@@ -101,9 +108,12 @@ spec:
               mountPath: /etc/ceph-csi-config/
             - name: keys-tmp-dir
               mountPath: /tmp/csi/keys
+            - name: ceph-csi-mountinfo
+              mountPath: /csi/mountinfo
         - name: liveness-prometheus
           securityContext:
             privileged: true
+            allowPrivilegeEscalation: true
           image: {{ .Values.ceph.images.cephCSI }}
           args:
             - "--type=liveness"
@@ -162,7 +172,13 @@ spec:
           configMap:
             name: ceph-csi-config
         - name: keys-tmp-dir
-          emptyDir: { medium: "Memory" }
+          emptyDir: {
+            medium: "Memory"
+          }
+        - name: ceph-csi-mountinfo
+          hostPath:
+            path: /var/lib/kubelet/plugins/{{ .Values.ceph.driverName }}//mountinfo
+            type: DirectoryOrCreate
 ---
 # This is a service to expose the liveness metrics
 apiVersion: v1
