--- a/ceph-csi/cephfs/v3.8.0/templates/8-storageclass.yaml
+++ b/ceph-csi/cephfs/v3.8.0/templates/8-storageclass.yaml
@@ -43,11 +43,27 @@ parameters:
   # ceph kernelclient (kernel).
   # If omitted, default volume mounter will be used - this is
   # determined by probing for ceph-fuse and mount.ceph
-  # mounter: kernel
+  mounter: kernel
 
   # (optional) Prefix to use for naming subvolumes.
   # If omitted, defaults to "csi-vol-".
   # volumeNamePrefix: "foo-bar-"
+
+  # (optional) Boolean value. The PVC shall be backed by the CephFS snapshot
+  # specified in its data source. `pool` parameter must not be specified.
+  # (defaults to `true`)
+  # backingSnapshot: "false"
+
+  # (optional) Instruct the plugin it has to encrypt the volume
+  # By default it is disabled. Valid values are "true" or "false".
+  # A string is expected here, i.e. "true", not true.
+  # encrypted: "true"
+
+  # (optional) Use external key management system for encryption passphrases by
+  # specifying a unique ID matching KMS ConfigMap. The ID is only used for
+  # correlation to configmap entry.
+  # encryptionKMSID: <kms-config-id>
+
 
 reclaimPolicy: Delete
 allowVolumeExpansion: true
