--- a/user-console/notebook/template.yaml
+++ b/user-console/notebook/template.yaml
@@ -1,24 +1,55 @@
 apiVersion: app.tensorstack.dev/v1beta1
 kind: Template
 metadata:
-  name: t9k-notebook
-  displayName: "T9k Notebook"
-  category: 
-  - T9k
+  name: jupyter-lab
+  displayName: "Jupyter Lab"
+  categories: 
   - IDE
-  description: "T9k Notebook allows you to easily create and manage Jupyter Notebook and Rstudio. Whether you are a beginner or a professional, it can meet your needs for data analysis and programming."
-  icon: "file://$APP_DIR/icon.png"
+  description: "Jupyter is the latest web-based interactive development environment for notebooks, code, and data. Its flexible interface allows users to configure and arrange workflows in data science, scientific computing, computational journalism, and machine learning."
+  icon: "https://upload.wikimedia.org/wikipedia/commons/3/38/Jupyter_logo.svg"
 template:
   crd:
     group: tensorstack.dev
-    resources: notebook
+    resource: notebooks
     versions:
     - version: v1beta1
-      template: "apiVersion: tensorstack.dev/v1beta1\nkind: Notebook\nmetadata:\n  name: tutorial\nspec:\n  type: jupyter\n  template:\n    spec:\n      containers:\n        - name: notebook\n          image: t9kpublic/torch-2.1.0-notebook:1.77.1\n          volumeMounts:\n            - name: workingdir\n              mountPath: /t9k/mnt\n          resources:\n            requests:\n              cpu: \"8\"\n              memory: 16Gi\n              nvidia.com/gpu: 1\n            limits:\n              cpu: \"16\"\n              memory: 32Gi\n              nvidia.com/gpu: 1\n      volumes:\n        - name: workingdir\n          persistentVolumeClaim:\n            claimName: tutorial"
-      readme: "快速部署一个 Notebook 应用（支持 JupyterLab 和 RStudio 两种类型的服务），同时本应用还提供 GPU 支持、SSH 访问支持等功能。"
+      template: "apiVersion: tensorstack.dev/v1beta1\nkind: Notebook\nmetadata:\n  name: tutorial\nspec:\n  type: jupyter\n  template:\n    spec:\n      containers:\n        - name: notebook\n          image: t9kpublic/torch-2.1.0-notebook:1.77.1\n          volumeMounts:\n            - name: workingdir\n              mountPath: /t9k/mnt\n          ## @param spec.template.spec.containers[0].resources.requests.cpu The minimum number of CPU the notebook requests.\n          ## @param spec.template.spec.containers[0].resources.requests.memory The minimum number of memory the notebook requests.\n          ## @param spec.template.spec.containers[0].resources.limits.cpu The maximum number of CPU the notebook can use.\n          ## @param spec.template.spec.containers[0].resources.limits.memory The maximum number of CPU the notebook can use.\n          resources:\n            requests:\n              cpu: \"8\"\n              memory: 16Gi\n            limits:\n              cpu: \"16\"\n              memory: 32Gi\n      volumes:\n        - name: workingdir\n          persistentVolumeClaim:\n            ## @param spec.template.spec.volumes[0].persistentVolumeClaim.claimName Mount a pvc as notebook working directory.\n            claimName: tutorial"
+      readme: "Jupyter is the latest web-based interactive development environment for notebooks, code, and data. Its flexible interface allows users to configure and arrange workflows in data science, scientific computing, computational journalism, and machine learning."
       note: "{{- $status := \"未就绪\" -}}{{- range .status.conditions -}}{{- if and (eq .type \"Suspended\") (eq .status \"True\") -}}{{- $status = \"暂停\" -}}{{- break -}}{{- else if and (eq .type \"Ready\") (eq .status \"True\") -}}{{- $status = \"运行中\" -}}{{- break -}}{{- end -}}{{- end -}}状态:  {{ $status }}\n类型:  {{ .spec.type }}\n镜像:  {{ (index .spec.template.spec.containers 0).image }}\n\n资源:\n  CPU:  {{ if (index .spec.template.spec.containers 0).resources.requests.cpu }}{{ (index .spec.template.spec.containers 0).resources.requests.cpu }}{{- else -}}-{{end}}/{{ if (index .spec.template.spec.containers 0).resources.limits.cpu }}{{ (index .spec.template.spec.containers 0).resources.limits.cpu }}{{- else -}}-{{end}}\n  内存:  {{ if (index .spec.template.spec.containers 0).resources.requests.memory }}{{ (index .spec.template.spec.containers 0).resources.requests.memory }}{{- else -}}-{{end}}/{{ if (index .spec.template.spec.containers 0).resources.limits.memory }}{{ (index .spec.template.spec.containers 0).resources.limits.memory }}{{- else -}}-{{end}}"
-      url: 
-      - name: "notebook: {{ .spec.type }}"
+      urls: 
+      - name: "jupyter"
+        url: "/t9k/notebooks/projects/{{ .metadata.namespace }}/name/{{ .metadata.name }}/lab"
+      readinessProbe:
+        resources:
+        - group: tensorstack.dev
+          version: v1beta1
+          resource: notebook
+          name: "{{ .metadata.name }}"
+          currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Ready\" }}{{- .status }}{{- end }}{{- end }}"
+          desiredStatus: "True"
+
+---
+
+apiVersion: app.tensorstack.dev/v1beta1
+kind: Template
+metadata:
+  name: rstudio
+  displayName: RStudio
+  categories: 
+  - IDE
+  description: "RStudio integrated development environment (IDE) is a set of tools built to help you be more productive with R and Python."
+  icon: "https://upload.wikimedia.org/wikipedia/commons/1/1b/R_logo.svg"
+template:
+  crd:
+    group: tensorstack.dev
+    resource: notebooks
+    versions:
+    - version: v1beta1
+      template: "apiVersion: tensorstack.dev/v1beta1\nkind: Notebook\nmetadata:\n  name: tutorial\nspec:\n  type: rstudio\n  template:\n    spec:\n      containers:\n        - name: notebook\n          image: t9kpublic/torch-2.1.0-notebook:1.77.1\n          volumeMounts:\n            - name: workingdir\n              mountPath: /t9k/mnt\n          ## @param spec.template.spec.containers[0].resources.requests.cpu The minimum number of CPU the notebook requests.\n          ## @param spec.template.spec.containers[0].resources.requests.memory The minimum number of memory the notebook requests.\n          ## @param spec.template.spec.containers[0].resources.limits.cpu The maximum number of CPU the notebook can use.\n          ## @param spec.template.spec.containers[0].resources.limits.memory The maximum number of CPU the notebook can use.\n          resources:\n            requests:\n              cpu: \"8\"\n              memory: 16Gi\n            limits:\n              cpu: \"16\"\n              memory: 32Gi\n      volumes:\n        - name: workingdir\n          persistentVolumeClaim:\n            ## @param spec.template.spec.volumes[0].persistentVolumeClaim.claimName Mount a pvc as notebook working directory.\n            claimName: tutorial"
+      readme: "RStudio integrated development environment (IDE) is a set of tools built to help you be more productive with R and Python."
+      note: "{{- $status := \"未就绪\" -}}{{- range .status.conditions -}}{{- if and (eq .type \"Suspended\") (eq .status \"True\") -}}{{- $status = \"暂停\" -}}{{- break -}}{{- else if and (eq .type \"Ready\") (eq .status \"True\") -}}{{- $status = \"运行中\" -}}{{- break -}}{{- end -}}{{- end -}}状态:  {{ $status }}\n类型:  {{ .spec.type }}\n镜像:  {{ (index .spec.template.spec.containers 0).image }}\n\n资源:\n  CPU:  {{ if (index .spec.template.spec.containers 0).resources.requests.cpu }}{{ (index .spec.template.spec.containers 0).resources.requests.cpu }}{{- else -}}-{{end}}/{{ if (index .spec.template.spec.containers 0).resources.limits.cpu }}{{ (index .spec.template.spec.containers 0).resources.limits.cpu }}{{- else -}}-{{end}}\n  内存:  {{ if (index .spec.template.spec.containers 0).resources.requests.memory }}{{ (index .spec.template.spec.containers 0).resources.requests.memory }}{{- else -}}-{{end}}/{{ if (index .spec.template.spec.containers 0).resources.limits.memory }}{{ (index .spec.template.spec.containers 0).resources.limits.memory }}{{- else -}}-{{end}}"
+      urls: 
+      - name: "rstudio"
         url: "/t9k/notebooks/projects/{{ .metadata.namespace }}/name/{{ .metadata.name }}/lab"
       readinessProbe:
         resources:
