--- a/user-console/stable-diffusion-webui-aki/chart/templates/deployment.yaml
+++ b/user-console/stable-diffusion-webui-aki/chart/templates/deployment.yaml
@@ -5,9 +5,7 @@ metadata:
   labels:
     {{- include "stable-diffusion-webui-aki.labels" . | nindent 4 }}
 spec:
-  {{- if not .Values.autoscaling.enabled }}
-  replicas: {{ .Values.replicaCount }}
-  {{- end }}
+  replicas: 1
   selector:
     matchLabels:
       {{- include "stable-diffusion-webui-aki.selectorLabels" . | nindent 6 }}
@@ -27,14 +25,13 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ include "stable-diffusion-webui-aki.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          image: "{{ .Values.image.registry }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           args:
             - --skip-install
