--- a/user-console/nextchat/chart/templates/deployment.yaml
+++ b/user-console/nextchat/chart/templates/deployment.yaml
@@ -5,9 +5,7 @@ metadata:
   labels:
     {{- include "nextchat.labels" . | nindent 4 }}
 spec:
-  {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
-  {{- end }}
   selector:
     matchLabels:
       {{- include "nextchat.selectorLabels" . | nindent 6 }}
@@ -27,14 +25,13 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ include "nextchat.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          image: "{{ .Values.image.registry }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
@@ -52,7 +49,9 @@ spec:
             {{- toYaml .Values.resources | nindent 12 }}
           env:
             {{- include "nextchat.envs" . | nindent 12 }}
+            {{- if gt (len .Values.env) 0 }}
             {{- toYaml .Values.env | nindent 12 }}
+            {{- end }}
           envFrom:
             - secretRef:
                 name: {{ include "nextchat.fullname" . }}
