fix some problems

--- a/user-console/nextchat/template.yaml
+++ b/user-console/nextchat/template.yaml
@@ -3,7 +3,7 @@ kind: Template
 metadata:
   name: nextchat
   displayName: NextChat
-  category: ["AI"]
+  categories: ["AI"]
   description: "NextChat 是一个设计精良的 ChatGPT 网页 UI，支持 ChatGPT、Claude、Gemini 和本地部署的兼容 OpenAI API 的推理服务。"
   icon: "file://$APP_DIR/icon.png"
 template:
