--- a/user-console/gpt-researcher/template.yaml
+++ b/user-console/gpt-researcher/template.yaml
@@ -3,7 +3,7 @@ kind: Template
 metadata:
   name: gpt-researcher
   displayName: "GPT Researcher"
-  category: ["AI"]
+  categories: ["AI"]
   description: "GPT Researcher 是一个智能体代理，专为各种任务的综合在线研究而设计。"
   icon: "https://s2.loli.net/2024/06/05/KuShAgEN9zWXnPH.png"
 template:
