--- a/user-console/vllm-smls/chart/templates/simplemlservice.yaml
+++ b/user-console/vllm-smls/chart/templates/simplemlservice.yaml
@@ -39,7 +39,7 @@ spec:
       {{- end }}
       containers:
       - name: server
-        image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+        image: "{{ .Values.image.registry }}/{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         # command: ["sleep", "infinity"]
         args:
