--- a/.github/workflows/release-stable-diffusion-webui-aki.yml
+++ b/.github/workflows/release-stable-diffusion-webui-aki.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - "user-console/stable-diffusion-webui-aki/chart/Chart.yaml"
+      - "user-console/stable-diffusion-webui-aki/chart/**"
 
 jobs:
   release:
