--- a/.github/workflows/release-vllm-smls.yml
+++ b/.github/workflows/release-vllm-smls.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - "user-console/vllm-smls/chart/Chart.yaml"
+      - "user-console/vllm-smls/chart/**"
 
 jobs:
   release:
