Add more description to t9k-app and manifest variables

--- a/user-console/terminal/chart/templates/terminal.yaml
+++ b/user-console/terminal/chart/templates/terminal.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: terminal
-          image: tsz.io/t9k/terminal:240522
+          image: t9kpublic/terminal:240611
           command:
           - ttyd
           - -p
