--- a/user-console/terminal/manifests/v0_1_1.yaml
+++ b/user-console/terminal/manifests/v0_1_1.yaml
@@ -9,7 +9,7 @@ resources:
     cpu: 200m
     memory: 200Mi
 
-## @param resources.limits.cpu Mount pvcs to terminal.
+## @param pvcs Mount pvcs to terminal.
 pvcs: []
 
 global:
