--- a/user-console/vllm-smls-llama3/chart/Chart.yaml
+++ b/user-console/vllm-smls-llama3/chart/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: vllm
-description: vLLM 是一个用于大语言模型的高吞吐量和内存高效的推理和服务引擎。
+name: vllm-llama3
+description: "使用 vLLM 部署 Llama 3 系列模型。"
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -15,7 +15,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.1.3
+version: 0.1.0
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
