--- a/user-console/vllm-smls-llama3/template.yaml
+++ b/user-console/vllm-smls-llama3/template.yaml
@@ -1,24 +1,24 @@
 apiVersion: app.tensorstack.dev/v1beta1
 kind: Template
 metadata:
-  name: vllm
-  displayName: vLLM
+  name: vllm-llama3
+  displayName: "vLLM (Llama 3)"
   categories: ["AI"]
-  description: "vLLM 是一个用于大语言模型的高吞吐量和内存高效的推理和服务引擎。"
-  icon: "file://$APP_DIR/icon.png"
+  description: "使用 vLLM 部署 Llama 3 系列模型。"
+  icon: "file://$APP_DIR/icon.svg"
 template:
   helm:
     repo: "oci://docker.io/t9kpublic"
-    chart: "vllm"
+    chart: "vllm-llama3"
     versions:
-    - version: 0.1.3
+    - version: 0.1.0
       urls: []
       readinessProbe:
         resources:
         - group: tensorstack.dev
           version: v1beta1
           resource: simplemlservices
-          name: "{{ .Release.Name }}-vllm"
+          name: "{{ .Release.Name }}-vllm-llama3"
           currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Ready\" }}{{- .status }}{{- end }}{{- end }}"
           desiredStatus: "True"
       dependences: {}
