--- a/user-console/vllm-smls/chart/templates/datacube.yaml
+++ b/user-console/vllm-smls/chart/templates/datacube.yaml
@@ -18,4 +18,11 @@ spec:
   executor:
     env:
       {{- toYaml .Values.env | nindent 6 }}
+    resources:
+      requests:
+        cpu: 500m
+        memory: 500Mi
+      limits:
+        cpu: 1
+        memory: 1Gi
 {{- end }}
