--- a/user-console/vllm-smls/chart/values.yaml
+++ b/user-console/vllm-smls/chart/values.yaml
@@ -11,35 +11,8 @@ image:
   registry: docker.io
   repository: vllm/vllm-openai
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "v0.4.3"
+  tag: "v0.3.3"
   pullPolicy: IfNotPresent
-
-## @param service.port Port for the Kubernetes service
-##
-service:
-  port: 8000
-
-## @param ingress.enabled Enable/disable Kubernetes ingress
-## @param ingress.className Ingress class name
-## @param ingress.annotations Annotations for Kubernetes ingress
-## @param ingress.hosts List of hosts for Kubernetes ingress
-## @param ingress.tls TLS configuration for Kubernetes ingress
-##
-ingress:
-  enabled: false
-  className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
 
 ## @param resources.limits.cpu CPU limit for Kubernetes resources
 ## @param resources.limits.memory Memory limit for Kubernetes resources
@@ -69,7 +42,7 @@ resources:
 ##
 model:
   # 模型以该名称被部署
-  name: ""
+  deployName: ""
 
   volume:
     storageClass: ""
